sidemenu alignment fixed and added settings in header

--- a/frontend/src/components/settings/style.scss
+++ b/frontend/src/components/settings/style.scss
@@ -65,7 +65,7 @@
   color: #8512d5;
   margin-right: 20px;
   display: inline-block;
-  float: left;
+  //float: left;
 }
 
 .tooltip-ex-right {
@@ -105,17 +105,6 @@ ul {
   list-style-type: none;
   margin: 0px;
   padding: 0px;
-}
-
-li {
-  text-align: left;
-  font: normal normal normal 14px/12px Roboto;
-  letter-spacing: 0px;
-  color: #707070;
-  margin-left: 12px;
-  margin-top: 10px;
-  margin-bottom: 15px;
-  opacity: 1;
 }
 
 .infoIcon {
